examples/springdemo/k8s-stage/deployment-crac-s3-mount.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-ddb-crac-s3-mount
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-boot-ddb-crac-s3-mount
  template:
    metadata:
      labels:
        app: spring-boot-ddb-crac-s3-mount
    spec:
      serviceAccountName: spring-boot-ddb
      volumes:
        - name: persistent-storage
          persistentVolumeClaim:
            claimName: s3-claim
      containers:
      - name: spring-boot-ddb-crac-s3-mount
        image: 656220021423.dkr.ecr.eu-west-1.amazonaws.com/springdemo:v22
        imagePullPolicy: Always
        volumeMounts:
          - name: persistent-storage
            mountPath: /opt/crac-files
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        securityContext:
          capabilities:
            add:
              - CHECKPOINT_RESTORE
              - SYS_PTRACE
          privileged: false
          runAsUser: 0
          allowPrivilegeEscalation: false
        command: ["/bin/bash"]
        args: ["/opt/scripts/run-service-crac.sh"]
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 1
          periodSeconds: 1
          failureThreshold: 60
---
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-ddb-crac-s3-mount-service
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app: spring-boot-ddb-crac-s3-mount
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-boot-ddb-crac-s3-mount-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: spring-boot-ddb-crac-s3-mount-service
              port:
                number: 8080
